# influencer-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REAL_CALLS_SETUP.md  SENDGRID_SETUP.md  add_negotiation_state.py  api_test_examples.json  cleanup_project.py  create_tables.py  database_queries.py  database_repository.py  debug_env.py  debug_errors.py  debug_test.json  docker-compose.yml  e2e_test_report_1750065644.json  e2e_test_report_1750065768.json  end_to_end_test.py  enhanced_contract_e2e_test.py  ensure_core_files.py  final_fix.py  fix_discovery_agent.py  fix_imports.py  fix_orchestration_state.py  hello.py  index.html  init.sql  main.py  migrate_codebase.py  pyproject.toml  quick_call_status_test.py  quick_contract.py  refactor_codebase.py  requirements.txt  setup.py  setup_database.py  simple_test.py  test-platform.py  (+10 more)
agents/: __init__.py  campaign_data_collector.py  campaign_orchestrator.py  contracts.py  discovery.py  enhanced_contract_generator.py  enhanced_contracts.py  enhanced_influencer_matcher.py  enhanced_negotiation.py  enhanced_negotiation_manager.py  enhanced_orchestrator.py  negotiation.py  orchestrator.py  unified_campaign_orchestrator.py
aiohttp/: __init__.py
api/: __init__.py  admin_api.py  admin_dashboard.py  campaigns.py  conversational_api.py  enhanced_campaign_endpoints.py  enhanced_monitoring.py  enhanced_webhooks.py  monitoring.py  webhooks.py
api/whatsapp/: __init__.py  conversation_state.py  enhanced_message_handler.py  llm_parser.py  orchestration_bridge.py  response_service.py  webhooks.py
backup_20250615_152152/: contract_IFC-CONV_01J.txt  e2e_test_contract_conv_01j.txt  e2e_test_report_1749978412.json  main.py  pyproject.toml  quick_monitoring_fix.py  requirements.txt  simple_test.py  test_actual_call.py
backup_20250615_152152/agents/: enhanced_contracts.py  enhanced_negotiation.py  enhanced_orchestrator.py  negotiation.py
backup_20250615_152152/api/: webhooks.py
backup_20250615_152152/backup_20250615_152152/agents/: contracts.py  orchestrator.py
backup_20250615_152152/backup_20250615_152152/api/: campaigns.py  enhanced_monitoring.py
backup_20250615_152152/config/: settings.py
backup_20250615_152152/data/: creators.json
backup_20250615_152152/services/: conversation_monitor.py  voice.py
config/: database.py  settings.py  simple_settings.py
core/: __init__.py  config.py  exceptions.py  models.py
data/: creators.json  creators.json.backup  creators.txt  dict.txt  market_data.json  market_data.txt  negotiation_tactis.txt
data/templates/: micro_influencer_contract.html  premium_contract.html  standard_contract.html
models/: __init__.py  campaign.py  conversation.py  creator.py  database_models.py  negotiation.py  whatsapp.py  workflow.py
numpy/: __init__.py
pydantic/: __init__.py
pydantic/v1/: __init__.py
pydantic_settings/: __init__.py
requests/: __init__.py
services/: __init__.py  admin_panel.py  ai_creator_discovery.py  contract_service.py  conversation_manager.py  conversation_monitor.py  creator_crm.py  data_service.py  database.py  document_processor.py  elevenlabs_conversation_service.py  elevenlabs_voice_service.py  email_service.py  embeddings.py  enhanced_voice.py  negotiation.py  notifications.py  openai_service.py  payment_service.py  performance_tracker.py  pricing.py  voice.py  voice_call_system.py  voice_service.py  whatsapp_ai.py
sklearn/: __init__.py
sklearn/metrics/: pairwise.py
tests/: __init__.py
